--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.2.8",
     "@nestjs/typeorm": "^10.0.0",
@@ -34,6 +36,9 @@
     "crypto-random-string": "^5.0.0",
     "mysql2": "^3.6.3",
     "nodemailer": "^6.9.7",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "randomstring": "^1.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -47,6 +52,8 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^3.0.13",
+    "@types/passport-local": "^1.0.38",
     "@types/randomstring": "^1.1.11",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
